<resources>
    <string name="app_name">超级播放器</string>
    <string name="select_source">请选择你要打开的视频源：</string>

    <string name="title_activity_vipplayer">vipplayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="vip_player">VIP播放</string>
    <!--相当于定义了一个字符串数组，数组名是source_array  -->
    <string-array name="source_array">
        <item>播放器①</item>
        <item>播放器②</item>
        <item>播放器③</item>
        <item>播放器④</item>
        <item>播放器⑤</item>
        <item>播放器⑥</item>
        <item>播放器⑦</item>
    </string-array>
    <string name="check_new">检查更新</string>
    <string name="About">关 于</string>
    <string name="contact_us">联系我们</string>
    <string name="about_info">超级播放器只是学习用途，勿用于商业</string>
    <string name="checkupdate_url">输入检测更新URL地址</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="Theversion">软件版本提示</string>
    <string name="serverurl">服务器地址</string>
    <string name="content_reg">请联系QQ/WX：297006042获取注册码</string>
    <string name="reg">注 册</string>
    <string name="get_phoneSn">获取本机序列号</string>
    <string name="input_regNum">请输入注册码</string>
    <string name="Phone_sn">手机序列号</string>
    <string name="register_pic">Register页面图片</string>
    <string name="start_code">暗码启动</string>
    <string name="off">关闭</string>
    <string name="on">启用</string>
    <string name="start_code_set">启动暗码设置</string>
</resources>
