<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAcitivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/reg"
            android:contentDescription="@string/register_pic" />

        <TextView
            android:id="@+id/textView_phonesn"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/Phone_sn"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_register"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:ems="10"
            android:hint="@string/input_regNum"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button_getphonesn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_phoneSn" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg" />

        <FrameLayout
            android:id="@+id/tiankong"
            android:layout_width="match_parent"
            android:layout_height="167dp">

        </FrameLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_reg"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>