<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/main_title"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_source"
                    android:textColor="#2196F3"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="33dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/location" />

                <TextView
                    android:id="@+id/textView_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgbtn_IQIYI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/aqy"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imgbtn_Tencent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/txsp"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imgbtn_Youku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/youku"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imgbtn_Mango"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/mgtv"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_Navi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="导航" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="237dp"
                    android:layout_height="116dp"
                    tools:ignore="UselessLeaf">

                </FrameLayout>

                <Switch
                    android:id="@+id/switch_codestart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:minWidth="20dp"
                    android:showText="false"
                    android:switchPadding="10dp"
                    android:text="@string/start_code"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    tools:ignore="InefficientWeight" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>